<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewTavolo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/colorePulsanti100percento"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tavoloImmagine"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="15dp"
            android:src="@drawable/baseline_table_restaurant_24" />

        <TextView
            android:id="@+id/numeroTavoloinSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/numero_tavolo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totaleElementiTavolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/totale_elementi"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalePrezzoTavolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/totale_prezzo"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>