<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreazioneUtenzaFragment">

    <LinearLayout
        android:id="@+id/layoutContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15" />

        <RelativeLayout
            android:layout_width="5dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/inserisciPersonale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backPulsanteArrowCreazionePersonale"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="7dp"
                android:text="@string/creazione_personale"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/inserisciPersonale"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nomeCreazionePersonale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nome" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layoutNome"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cognomeCreazionePersonale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cognome" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutemailCreazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/layoutCognome"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailCreazionePersonale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayoutCreazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutemailCreazione"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"

                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordCreazionePersonale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ruoloText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayoutCreazione"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/ruolo"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerRuoli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ruoloText"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:entries="@array/tipoUtente"
                android:minHeight="48dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreaPersonale"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerRuoli"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#82415B"
                android:text="@string/crea"
                android:textSize="15sp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:cornerRadius="10sp" />



            <ImageButton
                android:id="@+id/backPulsanteArrowCreazionePersonale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_arrow_back_50"
                tools:ignore="SpeakableTextPresentCheck" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingCirculatorCreazioneUtenza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="100dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorSize="100dp"
            app:trackColor="#F44336"
            app:trackThickness="10sp" />

        <TextView
            android:id="@+id/textLoadingCirculatorCreazioneUtenza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loadingCirculatorCreazioneUtenza"
            android:layout_centerHorizontal="true"
            android:text="@string/caricamento_in_corso"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>